apply plugin: 'java'
apply plugin: 'maven'

defaultTasks 'tasks'

group = 'net.nlacombe'
version = '1.0.0'

sourceCompatibility = 9
targetCompatibility = 9

dependencies {
	compile 'io.github.lukehutch:fast-classpath-scanner:2.7.0'
	compile 'org.apache.commons:commons-lang3:3.6'
	compile 'org.apache.commons:commons-collections4:4.1'
	compile 'org.slf4j:slf4j-api:1.7.25'

	testCompile 'junit:junit:4.12'
	testRuntime 'ch.qos.logback:logback-classic:1.2.3'
}

repositories {
	mavenCentral()
	mavenLocal()
}

uploadArchives {
	repositories {
		mavenLocal()
	}
}

javadoc {
	options.addStringOption('Xdoclint:none', '-quiet')
}

task sourcesJar(type: Jar, dependsOn: classes) {
	classifier = 'sources'
	from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
	classifier = 'javadoc'
	from javadoc.destinationDir
}

artifacts {
	archives sourcesJar
	archives javadocJar
}

task wrapper(type: Wrapper) {
	gradleVersion = '4.2'
}
